Phase 4, SV5: ProjectState is confined to the FX thread (fixes B10)
ProjectState is the per-project mutable state — the active file, the current code, the resolved
classpath, the ASTNode -> CodeBlock registry. Every mutation comes from the FX thread; two readers
did not, and nothing synchronised them. That produced the two failures B10 records: a debug session
dying on a ConcurrentModificationException the moment an edit landed, and the quiet one, a run
compiling the code from one revision against the classpath from the next.

The fix is confinement plus a snapshot:

- ProjectState.snapshot() returns Snapshot(code, compilationUnit, nodeToBlockMap, resolvedClasspath,
  files, template) — read together, on the FX thread.
- DebuggingService.startDebugging and CodeExecutionService.runCode/compileCode take it *before*
  spawning their thread; compileAndWait, buildRuntimeClasspath and the JDWP classpath build read the
  snapshot and never ProjectState. compileAndWait's state.setCurrentCode(...) is gone: it was a
  background-thread write of a value handed to it from that same state.
- The registry is published complete. CodeEditorService.refreshUI fills a fresh map and assigns it in
  one volatile write instead of clearing and refilling the live one, and getMutableNodeToBlockMap()
  is deleted — a half-built registry is no longer expressible.

Two things writing it taught, both now in bugs.md under B10:

The prescription said not to reach for volatile fields and concurrent collections, and this is why,
more precisely than it was written: the defect is not that a reader sees a stale field, it is that a
mutable object offers no point in time at which several fields can be read together. Only confinement
creates one. The snapshot is safe because of *where it is taken* — on the thread that also writes —
not because of what it copies. Taken from inside the background thread it would tear exactly as the
getter pair did. That is why both call sites snapshot outside the new Threa